@@ -22,6 +22,7 @@ export(ddmatrix.local)
 export(distribute)
 export(dmat_opts)
 export(eigen2)
+export(getLocal)
 export(is.ddmatrix)
 export(ldim)
 export(lm.fit)
